# clipperin

./: .env.example  .gitignore  CHANGELOG.md  FEATURE_COMPARISON.md  LICENSE  README.md  SECURITY.md  TAILWIND_SETUP.md  auto_clip.sh  docker-compose.yml  pyproject.toml  test_correction.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/release-notes/: v0.1.0.md
.github/workflows/: ci.yml
api/: Dockerfile  config.py  main.py  requirements.txt  tasks.py
docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
docs/: api.md  architecture.md  contributing.md
landing/: index.html
scripts/: analyze.sh  download.sh  local.py  render.sh  transcribe.sh
web/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/src/: App.jsx  index.css  main.jsx  theme.js
web/src/components/: ChapterSelector.jsx  ClipCard.jsx  FilterControls.jsx  Header.jsx  VideoPreview.jsx
