[project]
name = "auto-clipper"
version = "0.1.0"
description = "Self-hosted video clipping solution"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "clipper-core[full]",
    "clipper-cli[full]",
    "clipper-ui[full]",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
